@@ -136,6 +136,7 @@ Cacti CHANGELOG
 -feature#5931: Make it easier to connect content in the table data_input_data to the host and data source
 -feature#5935: Add additional detail to the Admin Email to trace the server's impacted by the errors
 -feature#5941: Implement Drag and Drop on Graph Templates Edit Page
+-feature#5942: Improve Speed of Graph Template Editing Through Bulk Updates
 -feature: Allow messages to be popup notifications
 -feature: Upgrade billboard.js to version 3.14.1
 -feature: Upgrade jQueryUI to 1.14.1
